:lipstick: style: Fix dark mode style

--- a/src/styles/dark-theme.scss
+++ b/src/styles/dark-theme.scss
@@ -66,6 +66,7 @@ body.dark {
   // post
   blockquote {
     border-left: 4px solid rgba(255, 255, 255, 0.822);
+    color: $dark-middle-font-color;
   }
 
   h1,
